2003-01-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoCustomAttrs.cs: fixed shortcut in GetCustomAttributes.
	The argument ICustomAttributeProvider can be of other types different
	from Type. Handle it.

2003-01-28  Zoltan Varga  <vargaz@freemail.hu>

	* DateTime.cs: fix FromFileTime so the time returned by 
	File::GetLastModificationTime etc. is in the correct timezone.

2003-01-28  Patrik Torstensson
	* Exception.cs: reverted formating/endline changes (sorry guys)

2003-01-28  Patrik Torstensson

	* MarshalByRefObject.cs: implemented GetObjectIdentity
	* Exception.cs: added support for remote exceptions

2003-01-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DateTime.cs: fixed bug #37225.

2003-01-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Enum.cs: Clone the arrays in GetNames and GetValues. Thanks lupus!

2003-01-27  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Added DoTypeResolve method which will be called by
	the runtime to raise TypeResolve events.

2003-01-27  Duncan Mak  <duncan@ximian.com>

	* Enum.cs (ToType): Implement this using Convert.ToType.

2003-01-21  Miguel de Icaza  <miguel@ximian.com>

	* Math.cs: Remove Pow's implementation body as it was wrong.  The
	C code does the right thing.  The code was trying to handle a
	number of cases, and that was incorrect.

2003-01-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CharEnumerator.cs: fix to Current by crainaj@hotmail.com. Closes
	bug #37113.

2003-01-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Enum.cs: added caching to GetInfo.

2003-01-23  Dick Porter  <dick@ximian.com>

	* Environment.cs (System): Implemented ExitCode

2003-01-23  Zoltan Varga  <vargaz@freemail.hu>

	* Type.cs (IsInstanceOfType): fixed regression caused by the change
	to IsSubclassOf().

2003-01-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoType.cs: re-added lines that were removed in the previous commit.

2003-01-16  Lluis Sanchez Gual <lsg@ctv.es>
