@@ -1,5 +1,10 @@
 2003-01-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* MonoCustomAttrs.cs: fixed GetBase () for Type. Thanks to Zoltan for
+	reporting.
+
+2003-01-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* MonoCustomAttrs.cs: fixed shortcut in GetCustomAttributes.
 	The argument ICustomAttributeProvider can be of other types different
 	from Type. Handle it.
